# Kubernetes-Microservices

./: .env  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
- Sample/productServiceJava/: .classpath  .project  HELP.md
- Sample/productServiceNode/: app.js  package-lock.json
- Support Files/: Ecommerce Mircoservice Architecture Model.docx  Table Files.xlsx  WebServices.postman_collection.json  products.json  ~$ommerce Mircoservice Architecture Model.docx
ASample/productServiceRust/: Cargo.toml
ASampleDevelop/productServiceNode/: package.json
ASampleDevelop/productServicePython/: app.py
ASampleDevelop/productServiceRustMongo/: Cargo.toml
ASampleDevelop/productServiceRustRedis/: Cargo.toml
customerServicePython/: customerServicePython.py
databases/customerServiceMongo/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--3120332025316180286.wt  collection-0--5024860800169070891.wt  collection-2--3120332025316180286.wt  collection-4--3120332025316180286.wt  collection-7--3120332025316180286.wt  index-1--5024860800169070891.wt  index-3--3120332025316180286.wt  index-5--3120332025316180286.wt  index-6--3120332025316180286.wt  sizeStorer.wt
databases/orderServiceMongo/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--6537792270895870885.wt  collection-0-6849260981384093893.wt  collection-2--6537792270895870885.wt  sizeStorer.wt  (+10 more)
orderServiceNode/: calculateTotalPrice.js  orderServiceNode.js  package-lock.json  package.json
productService/: pom.xml
shippingServicePython/: shippingServicePython.py
(+105 files in other folders)
