[package]
name = "productServiceRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0"
bson = "2.0"
rocket = "0.5.0-rc.1"
rocket_contrib = "0.4.11"
serde = "1.0.160"
serde_json = "1.0.96"
